# axiswolf

./: .gitignore  CLAUDE.md  DEPLOY.md  README.md  render.yaml
.claude/: settings.local.json
.github/workflows/: deploy.yml
axis_server/: index.html  package-lock.json  package.json  vite.config.ts
axis_server/public/: 404.html
axis_server/src/: App.tsx
axis_server/src/components/: GameBoard.tsx  GameRules.tsx  RulesModal.tsx
axis_server/src/contexts/: GameContext.tsx
axis_server/src/data/: axes.ts  axisLabels.ts  mutators.ts  onlineCards.ts  themes.ts
axis_server/src/lib/: api.ts
axis_server/src/pages/: Debug.tsx  Game.tsx  Home.tsx  Host.tsx  OnlineGame.tsx  OnlineHome.tsx
axis_server/src/types/: index.ts  shuffle-seed.d.ts
axis_server/src/utils/: axisGenerator.ts  cardGenerator.ts  roleAssigner.ts  seedGenerator.ts
backend/: README.md  axis_data.py  build.sh  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  start_peerjs.sh
card_generator_python/: .gitignore  README.md  generate_all_multiple.py  generate_cards.py  generate_cards_from_selected.py  generate_cards_txt2img.py  generate_dalle3.py  generate_from_csv_txt2img.py  pyproject.toml  requirements.txt
card_generator_python/output_dalle3/: generation_info_dalle3_20250907151952.json
card_generator_python/word_lists/: all_words.csv  sample_words.txt  single_test.txt  test_words_en.txt
docs/: DEPLOY.md  TODO.md
frontend/: .env.example  .env.production  index.html  package-lock.json  package.json
frontend/public/: 404.html
frontend/src/: App.tsx
(+20 files in other folders)
